--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+REACT_APP_ENV_FILE_PROCESS_ENV=react_app_env_file_process_env
 REACT_APP_ENV_FILE_1=react_app_env_file_1
 REACT_APP_ENV_FILE_2=react_app_env_file_2
 REACT_APP_ENV_FILE_3=react_app_env_file_3
