variables process import ok

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 REACT_APP_ENV_FILE_PROCESS_ENV=react_app_env_file_process_env
+REACT_APP_ENV_FILE_IMPORT_META_ENV=react_app_env_file_import_meta_env
 REACT_APP_ENV_FILE_1=react_app_env_file_1
 REACT_APP_ENV_FILE_2=react_app_env_file_2
 REACT_APP_ENV_FILE_3=react_app_env_file_3
