--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-REACT_APP_ENV_FILE_PROCESS_ENV=react_app_env_file_process_env
-REACT_APP_ENV_FILE_IMPORT_META_ENV=react_app_env_file_import_meta_env
-REACT_APP_ENV_FILE_1=react_app_env_file_1
-REACT_APP_ENV_FILE_2=react_app_env_file_2
-REACT_APP_ENV_FILE_3=react_app_env_file_3
+# Por defecto 5000
+PORT=
+REACT_APP_ENV_FILE_VAR_1=valor_1
+REACT_APP_ENV_FILE_VAR_2=valor_2
+REACT_APP_ENV_FILE_VAR_3=valor_3
