--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-# Por defecto 5000
-PORT=
+# Por defecto 5000 (si no se especifica un puerto hay que dejarlo comentado o provocará un error de Nginx al desplegar el contenedor en Docker)
+# PORT=
+
 REACT_APP_ENV_FILE_VAR_1=valor_1
 REACT_APP_ENV_FILE_VAR_2=valor_2
 REACT_APP_ENV_FILE_VAR_3=valor_3
